INPUT textfield: Do not remove line-height of innerEditor if we don't need to remove it.

The root cause of crbug.com/601209 is a difference between
 - text centering behavior of taller line-height, and
 - innerEditor box centering behavior in LayoutTextControlSingleLine.

It's hard to unify them.  So this CL updates LayoutTextControlSingleLine::
createInnerEditorStyle so that line-height is not removed if we don't need to
remove it.

BUG=601209

Review URL: https://codereview.chromium.org/1915353003

Cr-Commit-Position: refs/heads/master@{#389767}

Former-commit-id: 5418e1dbff8bdbea12ea0e55c8dc8828fdbbd820